[package]
name = "oth02b_tokio_mpsc_b_filewrite"
version = "0.1.0"
authors = ["birkin <birkin.diana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
tokio = { version = "0.2.21", features = ["full"] }
