[package]
name = "part03_tokio_synchronous"
version = "0.1.0"
authors = ["birkin <birkin.diana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["full"] }
futures = "0.3.4"
